# async

./: .clangd  2  ;  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  notes.md  todo.md  vcpkg.json
benchmarks/: CMakeLists.txt  poll.cpp
src/: channel_test.h  defines.h  epoll.cpp  main.cpp  pch.h  poll.h  select.h  select_test.h  signal.h  sleep.h  utils.h
src/async/: channel.h  channel_select.h  defines.h  mutex.h  new_select.h  pch.h  poll.h  read.h  runtime.h  select.h  signal.h  sleep.h  time.h  utils.h  wait_group.h
src/async/cont/: interval_map.h  map_wrapper.h  midpoint_generic_multihash.h  midpoint_map.h  midpoint_map_wrapper.h  rb_tree.h  sparse_set.h  sparse_set_list.h
src/async/internal/: defines.h  pch.h  select_base.h  utils.h
src/async/internal/cont/: interval_map.h  midpoint_map.h  sparse_set.h  sparse_set_list.h
src/async/internal/io/: base.h
src/async/internal/io/pal/: io_context.h  io_handle.h  io_op.h
src/async/internal/io/pal/op/: read.h
src/async/internal/io/platform/linux/: io_context.cpp  io_context.h  io_handle.h  io_op.h
src/async/internal/io/platform/linux/op/: read.h
src/async/internal/runtime/: coroutine.cpp  coroutine.h  defines.h  io_context_thread.cpp  io_context_thread.h  io_thread_handler.cpp  io_thread_handler.h  prio_timer_thread.cpp  prio_timer_thread.h  runqueue.cpp  runqueue.h  runtime.cpp  runtime.h  runtime_core.cpp  runtime_core.h  task_handle.h  task_handle_base.h  timer.cpp  timer.h  timer_thread.cpp  timer_thread.h  timer_thread_handler.cpp  timer_thread_handler.h  worker_thread.cpp  worker_thread.h
src/async/internal/util/: buffered_observer_signal.h  observer_signal.h  signal_connection.h  sync_op.h
src/async/io/: base.h
src/async/io/pal/: io_context.h  io_op.h  io_type.h
src/async/io/pal/op/: read.h
src/async/io/platform/linux/: io_context.cpp  io_context.h  io_handle.h  io_op.h
src/async/io/platform/linux/op/: read.h
src/async/runtime/: coroutine.cpp  coroutine.h  defines.h  io_context_thread.cpp  io_context_thread.h  io_thread_handler.cpp  io_thread_handler.h  prio_timer_thread.cpp  prio_timer_thread.h  runqueue.cpp  runqueue.h  runtime.cpp  runtime.h  runtime_core.cpp  runtime_core.h  task_handle.h  task_handle_base.h  task_handle_handler.cpp  task_handle_handler.h  timer.cpp  timer.h  timer_thread.cpp  timer_thread.h  timer_thread_handler.cpp  timer_thread_handler.h  worker_thread.cpp  worker_thread.h
src/async/util/: any_ptr.h  buffered_observer_signal.h  signal.h  signal_connection.h  sync_op.h
src/containers/: heap.h
src/runtime/: coroutine.h  defines.h  runqueue.cpp  runqueue.h  runtime.cpp  runtime.h  runtime_core.cpp  runtime_core.h  timer.cpp  timer.h  timer_thread.cpp  timer_thread.h  timer_thread_handler.cpp  timer_thread_handler.h  worker_thread.cpp  worker_thread.h
tests/: associative_sparse_set.cpp  channel_tests.cpp  generic_mid_map_tests.cpp  interval_map_tests.cpp  io_tests.cpp  midpoint_map_tests.cpp  poll_tests.cpp  prio_timer_tests.cpp  random_tests.cpp  signal_tests.cpp  spawn_tests.cpp
triplets/: x64-linux.asdf  x64-linux.cmake
